# tic-tac-toe

./: CMakeLists.txt  README.md
include/: AI.h  BOARD.h  Config.h  GAME.h  Game.h  MAIN.h  PREGAME.h  TESTS.h  player.h
include/input/: Menu.h
src/: AI.cpp  Config.cpp  board.cpp  game.cpp  main.cpp  player.cpp  pregame.cpp  tests.cpp
src/input/: Menu.cpp
